TODO: Tidy up jquery.sceditor.js
TODO: Fix accessibility
TODO: Fix header releated BBCode bug

Version 1.2.9:
	Started on improving accessibility

Version 1.2.8:
	Updated to use contentEditable if supported. This fixes some selection issues in IE9
	Fixed problem with YouTube videos hiding after switching between WYSIWYG and source modes
	Added new build page
	Fixed bug causing quotes with author attributes to lose their content
	Fixed HTML5 form required attribute compatiblity
	Added destroy function to enable removing the editor
	Updated editor to only pre-load emoticons when they are in the toolbar.
		Idea from kaen25's[https://github.com/kaen25/] fork.
	Added Dutch translation kindly submitted by Samuel
	Added German translation kindly submitted by Tina
	Changed I18n to default to just the ISO 639-1 and only include the dialect when needed

Version 1.2.7:
	Added options for emoticons to require spaces around them for compatibility.
		i.e. If you have the emoticon :/ it will not replace http://. This
		mode currently has limited As You Tyne emoticon conversion.
	Fixed problem with YouTube dropdown
	Fixed Opera problem with [url]
	Fixed problem with default style causing table to have size tags wrapped around them
	Fixed dropdowns being hidden behind YouTube videos
	Fixed empty tables being inserted if columns and rows are set to 0
	Updated so that when enter is pressed on code or quotes a new line is always inserted
	Updated quote behaviour to insert selected text into the quote rather than replace it
	Updated editor to not allow block level elements inside inline elements
	Fixed problem with Opera not allowing text to be aligned after switching from WYSIWYG to source modes and back again
	Updated so there is always a newline at the end of the editor if a quote or code is inserted. Allows to get out of them.
	Updated to allow only certian bbcode tags within tags
	Fix bug with IE selection

Version 1.2.6:
	Added i18n support