@@ -4,6 +4,7 @@ TODO: Fix header releated BBCode bug
 
 Version 1.2.9:
 	Started on improving accessibility
+	Added charset option
 
 Version 1.2.8:
 	Updated to use contentEditable if supported. This fixes some selection issues in IE9
